# mypycheck

./: .gitignore  LICENSE  README.md  pre-commit  pyproject.toml
src/mypycheck/: __init__.py  __main__.py
tests/: ut_basic.py
tests/checker_files/: bad_missing_func_arg.py  bad_no_func_args.py  bad_no_func_ret.py  good_func.py
