[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mypycheck"
version = "0.0.7"
authors = [
    { name="David Sloan", email="delus.dlsloan@gmail.com" },
]
description = "A simple python type-checking enforcer"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["mypycheck*"]

