[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mypycheck"
version = "0.0.8"
authors = [
    { name="David Sloan", email="delus.dlsloan@gmail.com" },
]
description = "A simple python type-checking enforcer"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "argparse",
]

[project.scripts]
    mypycheck = "mypycheck:check_main"
    mypycheck-clean = "mypycheck:clean"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mypycheck*"]

